# SentimentAnalysis

./: CMakeLists.txt  README.md
src/: UI.cpp  UI.h  datita.csv  hashmap.cpp  hashmap.h  main.cpp
